--- a/src/components/FoodDisplay/FoodDisplay.css
+++ b/src/components/FoodDisplay/FoodDisplay.css
@@ -12,3 +12,39 @@
     gap: 30px;
     row-gap: 50px;
 }
+
+.icon{
+    margin-left: 10px;   
+    height:20px;
+    width:20px;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    
+}
+
+
+.label-text {
+    margin-right: 10px;
+    font-size: 16px;
+    color: #333;
+}
+
+.search-input {
+    padding: 8px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 250px; /* Adjust based on your preference */
+    outline: none;
+    margin-left: 10px;
+}
+
+.search-input:focus {
+    border-color: #0056b3;
+}
